# menubar-mindbell

./: .gitignore  LICENSE  README.md  art.bstew.mindbell.plist  main.py  mindbell.py  pyproject.toml  run.sh  setup.py
.claude/: settings.local.json
media/: jap-rin-1.aiff
scripts/: README.md  build.sh  clean.sh  convert-audio.sh  install-launchagent.sh  install.sh  run.sh  setup.sh  test-app.sh  uninstall-launchagent.sh
